--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,21 +1,3 @@
-nav {
-  top: 20px;
-  width: 80%;
-  left: 20%;
-}
-
-nav h1 {
-  width: 300px;
-  padding-left: 20px;
-}
-
-@media screen and (max-width: 900px) {
-  nav h1 {
-    opacity: 0;
-  }
-  nav {
-    top: 0;
-    width: 100%;
-    left: 0%;
-  }
+.navbar {
+  display: none;
 }
