--- a/src/styles/seminar.css
+++ b/src/styles/seminar.css
@@ -1,7 +1,3 @@
-#seminar h1 {
-  font-weight: bold;
-  margin-left: 20%;
-  text-transform: uppercase;
-  margin-top: 50px;
-  margin-bottom: 20px;
+.navbar {
+  display: flex;
 }
